Fixed the sample so it will build the library for devices. Added InsertAll options to sqlite-net. Added iOS 4.1 support.

--- a/Sample/Sample.csproj
+++ b/Sample/Sample.csproj
@@ -54,6 +54,8 @@
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
     <CodesignKey>iPhone Developer</CodesignKey>
+    <IpaPackageName />
+    <MtouchI18n />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
